force-app/main/default/objects/AdGroup__c/AdGroup__c.object-meta.xml
<CustomObject>
    <label>広告グループ</label>
    <pluralLabel>広告グループ</pluralLabel>
    <nameField>
        <label>広告グループ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 