force-app/main/default/objects/AdGroup__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <label>予算</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField> 