force-app/main/default/objects/AdGroup__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>キャンペーン</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>広告グループ</relationshipLabel>
    <relationshipName>AdGroups</relationshipName>
    <type>MasterDetail</type>
</CustomField> 