force-app/main/default/objects/AdGroup__c/fields/GroupCode__c.field-meta.xml
<CustomField>
    <fullName>GroupCode__c</fullName>
    <label>グループコード</label>
    <length>50</length>
    <type>Text</type>
</CustomField> 