force-app/main/default/objects/AdGroup__c/fields/MaxBid__c.field-meta.xml
<CustomField>
    <fullName>MaxBid__c</fullName>
    <label>最大入札額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 