force-app/main/default/objects/AdGroup__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>アクティブ</fullName>
                <default>true</default>
                <label>アクティブ</label>
            </value>
            <value>
                <fullName>一時停止</fullName>
            </value>
            <value>
                <fullName>終了</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 