force-app/main/default/objects/AdGroup__c/fields/TargetingCriteria__c.field-meta.xml
<CustomField>
    <fullName>TargetingCriteria__c</fullName>
    <label>ターゲティング条件</label>
    <type>TextArea</type>
</CustomField> 